tests/outref/TERR014.ref

-- TERR014 : Error underline is correct when there are extra newlines between queries (only possible with octo -f)

select * from aaaa;

select * from aaaa;




select * from aaaa;





select * from

aaaa;
[ERROR]: ERR_UNKNOWN_TABLE: Unknown table: AAAA
LINE 3:1: select * from aaaa;
                        ^^^^
[ERROR]: ERR_UNKNOWN_TABLE: Unknown table: AAAA
LINE 5:1: select * from aaaa;
                        ^^^^
[ERROR]: ERR_UNKNOWN_TABLE: Unknown table: AAAA
LINE 10:1: select * from aaaa;
                         ^^^^
[ERROR]: ERR_UNKNOWN_TABLE: Unknown table: AAAA
LINE 18:3: aaaa;
           ^^^^
